<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="items_label">Edit Items</string>
    <string name="item_add">Add Item</string>
    <string name="item_name">Name:</string>
    <string name="item_price">Price: $</string>
    <string name="ok">OK</string>
    <string name="emptyText"/>
    <string name="taxStr">Tax:</string>
    <string name="tipStr">Tip:</string>
    <string name="taxDollar">Tax: $</string>
    <string name="tipDollar">Tip: $</string>
    <string name="total">Total: $</string>
    <string name="subtotalStr">Subtotal: $</string>

</resources>
