<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.science.tipcalculator.Summary" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp" >

            <TableRow
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/subtotalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotalStr"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:labelFor="@+id/subtotalValue" />

                <EditText
                    android:id="@+id/subtotalValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:clickable="false" />
            </TableRow>

            <TableRow
                android:layout_marginTop="64dp" >

                <TextView
                    android:id="@+id/taxText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taxStr"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:labelFor="@+id/taxValue" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/taxEdit" />
            </TableRow>

            <TableRow
                android:layout_marginTop="32dp" >

                <TextView
                    android:id="@+id/tipText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipStr"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:labelFor="@+id/tipValue" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/tipEdit" />
            </TableRow>

            <TableRow
                android:layout_marginTop="64dp" >

                <TextView
                    android:id="@+id/taxDollarText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taxDollar"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/taxDollarValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow
                android:layout_marginTop="16dp" >

                <TextView
                    android:id="@+id/tipDollarText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipDollar"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/TipDollarValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow
                android:layout_marginTop="64dp" >

                <TextView
                    android:id="@+id/totalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/totalValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

        </TableLayout>
    </ScrollView>
</RelativeLayout>