<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.science.tipcalculator.AddItem" >

    <EditText
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/itemNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/itemName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:text="@string/item_name"
        android:labelFor="@+id/itemName"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/itemName"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/itemPriceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/itemPrice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:text="@string/item_price"
        android:labelFor="@+id/itemPrice"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/itemAddOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemPrice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/ok" />

</RelativeLayout>
